# quiz-time

./: .gitignore  .prettierrc.json  Cargo.toml  flake.nix  package.json  passwords.txt  pnpm-lock.yaml
src/: conf.rs  error.rs  handlers.rs  logic.rs  main.rs  middleware.rs  models.rs  routes.rs  state.rs  templates.rs  ws.rs
src/auth/: mod.rs  oauth.rs  token.rs
src/game/: chain.rs  mod.rs  pinyin.rs  pinyin_utils.rs  room.rs
templates/: base.html  chain.html  game.html  index.html  login.html  pinyin.html  room.html
