[package]
name = "quiz-time"
version = "0.1.0"
edition = "2024"

[dependencies]
askama = "0.15.1"
async-trait = "0.1"
axum = { version = "0.8", features = ["ws"] }
base64 = "0.22"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
futures = "0.3"
headers = "0.4"
mime = "0.3"
rand = "0.8"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
